src/shell/shell.component.less
:host {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    border: 0;
    flex: 1 0;
    overflow: hidden;
}

.header {
    background-color: mediumaquamarine;
}

.body {
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
    border: 0;
    flex: 1 0;
    overflow: hidden;
}

.nav {
    display: flex;
    flex-direction: column;
    background-color: lightseagreen;
    width: 300px;
}

.nav-body {
    margin: 0;
    padding: 0;
    flex: 1 0;
    position: relative;
    overflow: hidden;
}

.nav-toolbar {
    background-color: cadetblue;
}

.nav-host {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: 0;
    padding: 0;
    overflow: auto;
}

.body2 {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    border: 0;
    flex: 1 0;
}

.main {
    margin: 0;
    padding: 0;
    border: 0;
    display: flex;
    flex-direction: column;
    background-color: aquamarine;
    flex: 1 0;
}

.main-toolbar {
    background-color: cadetblue;
}

.main-body {
    position: relative;
    overflow: hidden;
    margin: 0;
    padding: 0;
    flex: 1 0;
}

.main-host {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
}

.alt {
    margin: 0;
    padding: 0;
    border: 0;
    display: flex;
    flex-direction: column;
    background-color: darkcyan;
}

.alt-toolbar {
    background-color: cadetblue;
}

.alt-body {
    position: relative;
    overflow: hidden;
    margin: 0;
    padding: 0;
    flex: 1 0;
}

.alt-host {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
}

p-compose {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: auto;
}

